// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders other props 1`] = `
<div
  className="Grid start-xs center-xs end-xs top-xs middle-xs bottom-xs around-xs between-xs"
>
  <p>
    Grid
  </p>
</div>
`;

exports[`Grid renders with default props 1`] = `
<div
  className="Grid"
>
  <p>
    Grid
  </p>
</div>
`;
